syntax = "proto3";
option go_package = "./taskpb";

service Taskservice {
    rpc CreateTask (Request) returns (Response);
    rpc GetTask (Response) returns (Task);
    rpc UpdateTask (Task)  returns (TaskRequest);
    rpc DeleteTask (Response)  returns (TaskRequest);
}

message TaskRequest{
    string message = 1;
}

message Task {
    string id = 1;
    string title = 2;
    string assigned = 3;
}

message Request {
    string title = 1;
    string assigned = 2;
}

message Response {
    int32   id       = 1;
}